as on R5, return an error when *srcLen == 0 and set dstLen to 0 fix bug #120

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16294 a95241bf-73f2-0310-859d-f6bbb57e9c96